--- a/templates/edit_profile_details.html
+++ b/templates/edit_profile_details.html
@@ -35,8 +35,13 @@
         </div>
 
         <div class="form-group">
-            {{ form.daily_work_rate.label}}<br>
-            {{ form.daily_work_rate }}
+            {{ form.baseline_work_rate.label}}<br>
+            {{ form.baseline_work_rate }}
+        </div>
+
+        <div class="form-group">
+            {{ form.additional_daily_work_rate.label}}<br>
+            {{ form.additional_daily_work_rate }}
         </div>
 
         <div class="form-group">
