--- a/templates/quotepad/productcomponent_form.html
+++ b/templates/quotepad/productcomponent_form.html
@@ -28,6 +28,16 @@
             {{ form.price.label}} (£) *<br>
             {{ form.price }}
         </div>
+
+        <div class="form-group">
+            {{ form.cost.label}} (£) *<br>
+            {{ form.cost }}
+        </div>
+
+        <div class="form-group">
+            {{ form.est_time_duration.label}} (Hrs) *<br>
+            {{ form.est_time_duration }}
+        </div>
         
         <button class="btn btn-primary" type="submit">Save</button>
         <a href="/productcomponentlist/" class="btn btn-secondary">Cancel</a>
