--- a/templates/yourheat/orderforms/radiatorform.html
+++ b/templates/yourheat/orderforms/radiatorform.html
@@ -34,87 +34,60 @@
     <div class = "row">
         <div class = "col-7">
             <div class="form-rad-group">
-                <p class="radiator-section-headings" >Radiator Measurement / Location *</p> 
+                <p class="radiator-section-headings" >Radiator / Location *</p> 
                 <table>
                     <tr>
-                        <td width="180px">Location</td>
-                        <td width="100px">Height</td>
-                        <td width="100px">Width</td>
-                        <td width="50px">P+/Single(K1)/Double(K2)</td>
+                        <td width="180px">Radiator</td>
+                        <td width="108px">Location</td>
                     </tr>
                     <tr>
-                        <td width="180px">{{wizard.form.location_1}}</td>
-                        <td width="100px">{{wizard.form.radiator_height_1}}</td>
-                        <td width="100px">{{wizard.form.radiator_width_1}}</td>
-                        <td width="50px">{{wizard.form.radiator_type_1}}</td>
+                        <td width="180px">{{wizard.form.radiator_1}}</td>
+                        <td width="100px">{{wizard.form.location_1}}</td>    
                     </tr>
                     <tr>
-                        <td width="180px">{{wizard.form.location_2}}</td>
-                        <td width="100px">{{wizard.form.radiator_height_2}}</td>
-                        <td width="100px">{{wizard.form.radiator_width_2}}</td>
-                        <td width="50px">{{wizard.form.radiator_type_2}}</td>
+                        <td width="180px">{{wizard.form.radiator_2}}</td>
+                        <td width="100px">{{wizard.form.location_2}}</td>    
                     </tr>
                     <tr>
-                        <td width="180px">{{wizard.form.location_3}}</td>
-                        <td width="100px">{{wizard.form.radiator_height_3}}</td>
-                        <td width="100px">{{wizard.form.radiator_width_3}}</td>
-                        <td width="50px">{{wizard.form.radiator_type_3}}</td>
+                        <td width="180px">{{wizard.form.radiator_3}}</td>
+                        <td width="100px">{{wizard.form.location_3}}</td>    
                     </tr>
                     <tr>
-                        <td width="180px">{{wizard.form.location_4}}</td>
-                        <td width="100px">{{wizard.form.radiator_height_4}}</td>
-                        <td width="100px">{{wizard.form.radiator_width_4}}</td>
-                        <td width="50px">{{wizard.form.radiator_type_4}}</td>
+                        <td width="180px">{{wizard.form.radiator_4}}</td>
+                        <td width="100px">{{wizard.form.location_4}}</td>    
                     </tr>
                     <tr>
-                        <td width="180px">{{wizard.form.location_5}}</td>
-                        <td width="100px">{{wizard.form.radiator_height_5}}</td>
-                        <td width="100px">{{wizard.form.radiator_width_5}}</td>
-                        <td width="50px">{{wizard.form.radiator_type_5}}</td>
+                        <td width="180px">{{wizard.form.radiator_5}}</td>
+                        <td width="100px">{{wizard.form.location_5}}</td>    
                     </tr>
                     <tr>
-                        <td width="180px">{{wizard.form.location_6}}</td>
-                        <td width="100px">{{wizard.form.radiator_height_6}}</td>
-                        <td width="100px">{{wizard.form.radiator_width_6}}</td>
-                        <td width="50px">{{wizard.form.radiator_type_6}}</td>
+                        <td width="180px">{{wizard.form.radiator_6}}</td>
+                        <td width="100px">{{wizard.form.location_6}}</td>    
                     </tr>
                     <tr>
-                        <td width="180px">{{wizard.form.location_7}}</td>
-                        <td width="100px">{{wizard.form.radiator_height_7}}</td>
-                        <td width="100px">{{wizard.form.radiator_width_7}}</td>
-                        <td width="50px">{{wizard.form.radiator_type_7}}</td>
+                        <td width="180px">{{wizard.form.radiator_7}}</td>
+                        <td width="100px">{{wizard.form.location_7}}</td>    
                     </tr>
                     <tr>
-                        <td width="180px">{{wizard.form.location_8}}</td>
-                        <td width="100px">{{wizard.form.radiator_height_8}}</td>
-                        <td width="100px">{{wizard.form.radiator_width_8}}</td>
-                        <td width="50px">{{wizard.form.radiator_type_8}}</td>
+                        <td width="180px">{{wizard.form.radiator_8}}</td>
+                        <td width="100px">{{wizard.form.location_8}}</td>    
                     </tr>
                     <tr>
-                        <td width="180px">{{wizard.form.location_9}}</td>
-                        <td width="100px">{{wizard.form.radiator_height_9}}</td>
-                        <td width="100px">{{wizard.form.radiator_width_9}}</td>
-                        <td width="50px">{{wizard.form.radiator_type_9}}</td>
+                        <td width="180px">{{wizard.form.radiator_9}}</td>
+                        <td width="100px">{{wizard.form.location_9}}</td>    
                     </tr>
                     <tr>
-                        <td width="180px">{{wizard.form.location_10}}</td>
-                        <td width="100px">{{wizard.form.radiator_height_10}}</td>
-                        <td width="100px">{{wizard.form.radiator_width_10}}</td>
-                        <td width="50px">{{wizard.form.radiator_type_10}}</td>
+                        <td width="180px">{{wizard.form.radiator_10}}</td>
+                        <td width="100px">{{wizard.form.location_10}}</td>    
                     </tr>
                     <tr>
-                        <td width="180px">{{wizard.form.location_11}}</td>
-                        <td width="100px">{{wizard.form.radiator_height_11}}</td>
-                        <td width="100px">{{wizard.form.radiator_width_11}}</td>
-                        <td width="50px">{{wizard.form.radiator_type_11}}</td>
+                        <td width="180px">{{wizard.form.radiator_11}}</td>
+                        <td width="100px">{{wizard.form.location_11}}</td>    
                     </tr>
                     <tr>
-                        <td width="180px">{{wizard.form.location_12}}</td>
-                        <td width="100px">{{wizard.form.radiator_height_12}}</td>
-                        <td width="100px">{{wizard.form.radiator_width_12}}</td>
-                        <td width="50px">{{wizard.form.radiator_type_12}}</td>
+                        <td width="180px">{{wizard.form.radiator_12}}</td>
+                        <td width="100px">{{wizard.form.location_12}}</td>    
                     </tr>
-
                 </table>
             </div>
         </div>
@@ -124,68 +97,55 @@
                 <p class="radiator-section-headings">Thermostatic Radiator Valves *</p> 
                 <table>
                     <tr>
-                        <td width="100px">Size</td>
-                        <td width="100px">Type</td>
+                        <td width="150px">Thermostatic Radiator Valve</td>
                         <td width="50px">Qty</td>
                     </tr>
                     <tr>
-                        <td width="100px">{{wizard.form.radiator_valve_size_1}}</td>
-                        <td width="100px">{{wizard.form.radiator_valve_type_1}}</td>
+                        <td width="150px">{{wizard.form.radiator_valve_1}}</td>
                         <td width="50px">{{wizard.form.radiator_valve_quantity_1}}</td>
                     </tr>
                     <tr>
-                        <td width="100px">{{wizard.form.radiator_valve_size_2}}</td>
-                        <td width="100px">{{wizard.form.radiator_valve_type_2}}</td>
+                        <td width="150px">{{wizard.form.radiator_valve_2}}</td>
                         <td width="50px">{{wizard.form.radiator_valve_quantity_2}}</td>
                     </tr>
                     <tr>
-                        <td width="100px">{{wizard.form.radiator_valve_size_3}}</td>
-                        <td width="100px">{{wizard.form.radiator_valve_type_3}}</td>
+                        <td width="150px">{{wizard.form.radiator_valve_3}}</td>
                         <td width="50px">{{wizard.form.radiator_valve_quantity_3}}</td>
                     </tr>
                     <tr>
-                        <td width="100px">{{wizard.form.radiator_valve_size_4}}</td>
-                        <td width="100px">{{wizard.form.radiator_valve_type_4}}</td>
+                        <td width="150px">{{wizard.form.radiator_valve_4}}</td>
                         <td width="50px">{{wizard.form.radiator_valve_quantity_4}}</td>
                     </tr>
                     <tr>
-                        <td width="100px">{{wizard.form.radiator_valve_size_5}}</td>
-                        <td width="100px">{{wizard.form.radiator_valve_type_5}}</td>
+                        <td width="150px">{{wizard.form.radiator_valve_5}}</td>
                         <td width="50px">{{wizard.form.radiator_valve_quantity_5}}</td>
                     </tr>
                     <tr>
-                        <td width="100px">{{wizard.form.radiator_valve_size_6}}</td>
-                        <td width="100px">{{wizard.form.radiator_valve_type_6}}</td>
+                        <td width="150px">{{wizard.form.radiator_valve_6}}</td>
                         <td width="50px">{{wizard.form.radiator_valve_quantity_6}}</td>
                     </tr>
                     <tr>
-                        <td width="100px">{{wizard.form.radiator_valve_size_7}}</td>
-                        <td width="100px">{{wizard.form.radiator_valve_type_7}}</td>
+                        <td width="150px">{{wizard.form.radiator_valve_7}}</td>
                         <td width="50px">{{wizard.form.radiator_valve_quantity_7}}</td>
                     </tr>
                     <tr>
-                        <td width="100px">{{wizard.form.radiator_valve_size_8}}</td>
-                        <td width="100px">{{wizard.form.radiator_valve_type_8}}</td>
+                        <td width="150px">{{wizard.form.radiator_valve_8}}</td>
                         <td width="50px">{{wizard.form.radiator_valve_quantity_8}}</td>
                     </tr>
                     <tr>
-                        <td width="100px">{{wizard.form.radiator_valve_size_9}}</td>
-                        <td width="100px">{{wizard.form.radiator_valve_type_9}}</td>
+                        <td width="150px">{{wizard.form.radiator_valve_9}}</td>
                         <td width="50px">{{wizard.form.radiator_valve_quantity_9}}</td>
                     </tr>
                     <tr>
-                        <td width="100px">{{wizard.form.radiator_valve_size_10}}</td>
-                        <td width="100px">{{wizard.form.radiator_valve_type_10}}</td>
+                        <td width="150px">{{wizard.form.radiator_valve_10}}</td>
                         <td width="50px">{{wizard.form.radiator_valve_quantity_10}}</td>
                     </tr>
                     <tr>
-                        <td width="100px">{{wizard.form.radiator_valve_size_11}}</td>
-                        <td width="100px">{{wizard.form.radiator_valve_type_11}}</td>
+                        <td width="150px">{{wizard.form.radiator_valve_11}}</td>
                         <td width="50px">{{wizard.form.radiator_valve_quantity_11}}</td>
                     </tr>
                     <tr>
-                        <td width="100px">{{wizard.form.radiator_valve_size_12}}</td>
-                        <td width="100px">{{wizard.form.radiator_valve_type_12}}</td>
+                        <td width="150px">{{wizard.form.radiator_valve_12}}</td>
                         <td width="50px">{{wizard.form.radiator_valve_quantity_12}}</td>
                     </tr>
                 </table>
@@ -196,42 +156,27 @@
     <div class = "row">
         <div class = "col-12">
             <div class="form-towel-group">
-                <p class="radiator-section-headings">Towel Rail Measurement / Location *</p> 
+                <p class="radiator-section-headings">Towel Rail / Location *</p> 
                 <table>
                     <tr>
+                        <td width="180px">Towel Rail</td>
                         <td width="220px">Location</td>
-                        <td width="50px">Width</td>
-                        <td width="100px">Height</td>
-                        <td width="50px">Colour</td>
-                        <td width="50px">Type</td>
                     </tr>
                     <tr>
+                        <td width="180px">{{wizard.form.towel_rail_1}}</td>
                         <td width="220px">{{wizard.form.towel_rail_location_1}}</td>
-                        <td width="50px">{{wizard.form.towel_rail_width_1}}</td>
-                        <td width="100px">{{wizard.form.towel_rail_height_1}}</td>
-                        <td width="50px">{{wizard.form.towel_rail_colour_1}}</td>
-                        <td width="50px">{{wizard.form.towel_rail_type_1}}</td>
                     </tr>
                     <tr>
+                        <td width="180px">{{wizard.form.towel_rail_2}}</td>
                         <td width="220px">{{wizard.form.towel_rail_location_2}}</td>
-                        <td width="50px">{{wizard.form.towel_rail_width_2}}</td>
-                        <td width="100px">{{wizard.form.towel_rail_height_2}}</td>
-                        <td width="50px">{{wizard.form.towel_rail_colour_2}}</td>
-                        <td width="50px">{{wizard.form.towel_rail_type_2}}</td>
                     </tr>
                     <tr>
+                        <td width="180px">{{wizard.form.towel_rail_3}}</td>
                         <td width="220px">{{wizard.form.towel_rail_location_3}}</td>
-                        <td width="50px">{{wizard.form.towel_rail_width_3}}</td>
-                        <td width="100px">{{wizard.form.towel_rail_height_3}}</td>
-                        <td width="50px">{{wizard.form.towel_rail_colour_3}}</td>
-                        <td width="50px">{{wizard.form.towel_rail_type_3}}</td>
                     </tr>
                     <tr>
+                        <td width="180px">{{wizard.form.towel_rail_4}}</td>
                         <td width="220px">{{wizard.form.towel_rail_location_4}}</td>
-                        <td width="50px">{{wizard.form.towel_rail_width_4}}</td>
-                        <td width="100px">{{wizard.form.towel_rail_height_4}}</td>
-                        <td width="50px">{{wizard.form.towel_rail_colour_4}}</td>
-                        <td width="50px">{{wizard.form.towel_rail_type_4}}</td>
                     </tr>
                 </table>
             </div>        
