--- a/templates/yourheat/orderforms/workloadandextrasform.html
+++ b/templates/yourheat/orderforms/workloadandextrasform.html
@@ -86,6 +86,10 @@
                 <label>{{ wizard.form.description_of_works.label }}</label>
                 {{ wizard.form.description_of_works }}
             </div>
+            <div class="form-group">
+                <label>{{ wizard.form.surveyors_notes.label }}</label>
+                {{ wizard.form.surveyors_notes }}
+            </div>
         </div>
 
     </div>
