--- a/templates/quotepad/productprice_form.html
+++ b/templates/quotepad/productprice_form.html
@@ -38,6 +38,11 @@
             {{ form.price.label}} (£) *<br>
             {{ form.price }}
         </div>
+
+        <div class="form-group">
+            {{ form.cost.label}} (£) *<br>
+            {{ form.cost }}
+        </div>
         
         <div class="form-group">
             {{ form.guarantee.label}}<br>
